apps/staging/node-red-dev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nodereddev-gateway
  namespace: node-red-dev
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "nodereddev.${domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: nodereddev-tls-prod
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nodereddev
  namespace: node-red-dev
spec:
  parentRefs:
    - name: nodereddev-gateway
  hostnames:
    - "nodereddev.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nodered-internal
          port: 80
