apps/staging/node-red-dev/ingress-outpost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: node-red-dev
spec:
  rules:
    - host: nodereddev.internal.com
      http:
        paths: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000
